@@ -11,13 +11,13 @@ int main()
   int fd;
 
   fd = open("foobar",O_WRONLY|O_CREAT, 0666);
-  // open ("foobar", O_WRONLY|O_CREAT, 0666) = 4
+  // open ("foobar", O_WRONLY|O_CREAT, 0666) = NNNN
 
   chmod("foobar", 0644);
   // chmod ("foobar", 0644) = 0
 
   fchmod(fd, 0444);
-  // fchmod (4, 0444) = 0
+  // fchmod (NNNN, 0444) = 0
 
   chown("foobar", 5000, -1);
 #ifdef __i386__
@@ -35,16 +35,16 @@ int main()
 
   fchown(fd, 5002, -1);
 #ifdef __i386__
-  // fchown (4, 5002, -1) =
+  // fchown (NNNN, 5002, -1) =
 #else
-  // fchown (4, 5002, NNNN) =
+  // fchown (NNNN, 5002, NNNN) =
 #endif
 
   fchown(fd, -1, 5003);
 #ifdef __i386__
-  // fchown (4, -1, 5003) =
+  // fchown (NNNN, -1, 5003) =
 #else
-  // fchown (4, NNNN, 5003) =
+  // fchown (NNNN, NNNN, 5003) =
 #endif
 
   lchown("foobar", 5004, -1);
@@ -67,9 +67,9 @@ int main()
   syscall(SYS_chown, "foobar", -1, 5001);
   // chown16 ("foobar", -1, 5001) =
   syscall(SYS_fchown, fd, 5002, -1);
-  // fchown16 (4, 5002, -1) =
+  // fchown16 (NNNN, 5002, -1) =
   syscall(SYS_fchown, fd, -1, 5003);
-  // fchown16 (4, -1, 5003) =
+  // fchown16 (NNNN, -1, 5003) =
   syscall(SYS_lchown, "foobar", 5004, -1);
   // lchown16 ("foobar", 5004, -1) =
   syscall(SYS_lchown, "foobar", -1, 5005);
